rendered/envs/alpha/vaultwarden/deployment-vaultwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vaultwarden
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/secrets: d3c944a5139155d62e63871c2b0dcd90-1
      labels:
        app.kubernetes.io/name: vaultwarden
    spec:
      containers:
        - env:
            - name: IP_HEADER
              value: X-Forwarded-For
            - name: SIGNUPS_ALLOWED
              value: "false"
            - name: ROCKET_PORT
              value: "8080"
            - name: DOMAIN
              value: https://vaultwarden.zebradil.dev
          image: oci.zebradil.dev/ghcr.io-cache/dani-garcia/vaultwarden@sha256:1587c45feaa479f1f5e8af3b00eded36bff77bcf1880cf8dbf0541706dd470e0
          name: vaultwarden
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /.env
              name: config
              readOnly: true
              subPath: .env
            - mountPath: /data
              name: data
      securityContext:
        fsGroup: 1000
      volumes:
        - name: config
          secret:
            secretName: config
        - name: data
          persistentVolumeClaim:
            claimName: data
