rendered/envs/alpha/vaultwarden/ingress-vaultwarden.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: vaultwarden
spec:
  rules:
    - host: vaultwarden.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: vaultwarden.junior.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: vaultwarden.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: vaultwarden.junior.ts.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: vaultwarden.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  name: http
            path: /
            pathType: Prefix
    - host: vaultwarden.junior.lan.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: vaultwarden
                port:
                  name: http
            path: /
            pathType: Prefix
